# rapina

./: README.md
.github/workflows/: ci.yml
docs/content/docs/core-concepts/: authentication.md  cron-scheduler.md  jwks.md
rapina/: Cargo.toml
rapina-cli/: Cargo.toml
rapina-macros/: Cargo.toml
rapina-macros/src/: lib.rs
rapina/examples/: endpoint_groups.rs  hello.rs  json.rs  macros.rs
rapina/examples/jwt-validation/: Cargo.toml
rapina/examples/jwt-validation/src/: main.rs
rapina/src/: app.rs  cron_scheduler.rs  error.rs  extract.rs  lib.rs  response.rs  router.rs  server.rs
rapina/src/introspection/: endpoint.rs  mod.rs
rapina/src/jwt/: extract.rs  jwks_client.rs  mod.rs
rapina/src/middleware/: body_limit.rs  mod.rs  trace_id.rs
rapina/src/observability/: mod.rs  tracing.rs
rapina/tests/: middleware.rs
