[package]
name = "rapina"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async
tokio = { version = "1.49.0", features = ["full"] }

# HTTP server
hyper = { version = "1.8.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
http = "1.4.0"
http-body-util = "0.1.3"
bytes = "1.11.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

uuid = { version = "1", features = ["v4"] }

# Our macros
rapina-macros = { path = "../rapina-macros/" }
